fixed margin spacing issue on mobile

--- a/assets/css/conf.css
+++ b/assets/css/conf.css
@@ -644,11 +644,13 @@ h3.title {
     .row {
         margin: 0;
         flex-wrap: wrap;
+        margin-top: 20px;
     }
 
     .row-mobile-reverse {
         margin: 0;
         flex-wrap: wrap;
+        margin-top: 20px;
     }
 
     p.text {
